[build-system]
requires = ["setuptools", "wheel", "PyYAML>=5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "YamlManager"
description = "A simple package for managing JSON and YAML files"
readme = "README.md"
requires-python = ">= 3.10"
license.file = "LICENSE"
authors = [
  { name = "Lucas Hix", email = "admin@peng1104.net" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
urls.changelog = "https://github.com/Peng1104/YamlManager/releases/latest"
urls.issues = "https://github.com/Peng1104/YamlManager/issues"
urls.source = "https://github.com/Peng1104/YamlManager"
version = "1.2.3"
dependencies = [
  "PyYAML >= 5.1",
]